R4: Slowly fix scrollbar behaviour

--- a/static/style4/scrollbar.css
+++ b/static/style4/scrollbar.css
@@ -1,26 +1,37 @@
-.scrollbar, div.searchlist > div.scrollbar {
-	z-index: 4;
+div.scrollblock {
+	padding: 0;
+	overflow: hidden;
+}
+
+div.scrollable {
+	box-sizing: border-box;
+	overflow: auto;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+
+div.scrollbar {
+	position: absolute;
+	z-index: 99;
 	background-color: inherit;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #888;
-	position: absolute;
 	left: 100%;
 	width: 5px;
 	opacity: 0.5;
 	padding: 0;
 	margin: 0;
 	@include transform(translateX(-10px));
-	@include transition-wtime(200ms, width, opacity, transform, border-color, background-color);
+	@include transition-wtime(250ms, width, opacity, transform, border-color, background-color);
 }
 
-.scrollbar_invisible, div.searchlist > div.scrollbar_invisible {
-	display: none;
+div.scrollbar_invisible {
 	height: 0px;
 	opacity: 0;
 }
 
-.scrollbar:hover, div.searchlist > div.scrollbar:hover {
+div.scrollbar:hover {
 	background: #AAB;
 	width: 10px;
 	opacity: 1;
@@ -28,7 +39,7 @@
 	@include transform(translateX(-15px));
 }
 
-.scrollbar:active, div.searchlist > div.scrollbar:active {
+div.scrollbar:active {
 	background-color: #556;
 	border-color: #000;
 	width: 10px;
